# llm-shark-release

./: .gitignore  .tauriignore  CONTRIBUTING.md  LICENSE  ROADMAP.md  SECURITY.md  kb_trace.json  multi-language.md  post-text.md  readme-code.md  readme.md  readme_en.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: parser.py  prompt-batch-json.md  prompt-cherry.md  prompt-mobile.md  prompt.md  prompt.md_BACKUP
app/config/: batch-llm-input-config.json
docs/: privacy-policy.md
fshark/: fshark.spec  main.py  pcap.py  requirements.txt  status.py
fshark/cfg/: LteConfig.ini  seq.ipcfg
fshark/decoders/: CPLatency.py  a11.py  amr.py  check_ipv6.py  diameter.py  epcDNS.py  esp.py  ethernet.py  f1ap.py  gb.py  gtp.py  gtpv2.py  http2.py  icmp.py  ip.py  ldap.py  linuxcooked.py  lte_uu.py  m3ua.py  megaco.py  ngap.py  pfcp.py  rtp.py  s1ap.py  sbi_dict.py  sctp.py  sgsap.py  sip.py  tcp.py  udp.py  x2ap.py
fshark/legacy-version/: .gitignore  603_01.pcap  603_01_decoded.txt  603_01_mermaid.txt  603_01_signaling.csv  603_01_signaling.json  README.md  claude_05_parser_v7.py  pyproject.toml
kb/: flowshark.cases.kb.en.enc  flowshark.cases.kb.zh.enc
map/: call_graph.html  graph_genetree.json
mobile/android-host/: settings.gradle.kts
mobile/android-host/app/: build.gradle.kts
mobile/android-host/app/src/main/: AndroidManifest.xml
mobile/android-host/app/src/main/assets/i18n/: ui-en-US.json  ui-es-ES.json  ui-fr-FR.json  ui-pt-PT.json  ui-ru-RU.json  ui-zh-Hans.json
mobile/android-host/app/src/main/res/layout/: activity_main.xml  item_message.xml
mobile/android-host/app/src/main/res/menu/: main_menu.xml
mobile/android-host/app/src/main/res/values/: strings.xml
mobile/ios-host/: MobileAuthHost.swift
mobile/rust-core/: Cargo.toml
mobile/rust-core/.cargo/: config.toml
mobile/rust-core/case_crypto_core/: Cargo.toml
mobile/rust-core/case_crypto_core/src/: lib.rs
mobile/rust-core/case_search_core/: Cargo.toml
mobile/rust-core/case_search_core/src/: lib.rs
mobile/rust-core/ffi_bridge/: Cargo.toml  build.rs
mobile/rust-core/ffi_bridge/src/: ffi_bridge.udl  lib.rs  mobile_qr_public_pkcs1.pem
mobile/rust-core/license_core/: Cargo.toml
mobile/rust-core/license_core/src/: lib.rs
mobile/rust-core/license_core/tests/fixtures/: desktop_mobile_qr_yearly.json
mobile/rust-core/policy_core/: Cargo.toml
mobile/rust-core/policy_core/src/: lib.rs
rust/batch-cli/: Cargo.toml
rust/batch-cli/src/: main.rs
rust/parser/: Cargo.toml
rust/parser-batch/: Cargo.toml
rust/parser-batch/src/: main.rs
rust/parser/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  main.js  style.css
ui/i18n/app/: ar-SA.json  de-DE.json  en-US.json  es-ES.json  fa-IR.json  fr-FR.json  hi-IN.json  id-ID.json  it-IT.json  ja-JP.json  ko-KR.json  ms-MY.json  nl-NL.json  pl-PL.json  pt-BR.json  pt-PT.json  ro-RO.json  ru-RU.json  th-TH.json  tr-TR.json  vi-VN.json  zh-CN.json  zh-Hans.json  zh-Hant.json
ui/i18n/store/: ar-SA.json  de-DE.json  en-US.json  es-ES.json  fa-IR.json  fr-FR.json  hi-IN.json  id-ID.json  it-IT.json  ja-JP.json  ko-KR.json  ms-MY.json  nl-NL.json  pl-PL.json  pt-BR.json  pt-PT.json  ro-RO.json  ru-RU.json  th-TH.json  tr-TR.json  vi-VN.json  zh-Hans.json  zh-Hant.json
(+11 files in other folders)
