[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
llm_license = { path = "../../license" }
